@@ -21,6 +21,11 @@ To query HBase data through Phoenix, you need:
 - Network access from the Trino coordinator and workers to the ZooKeeper
   servers. The default port is 2181.
 - A compatible version of Phoenix: all 5.x versions starting from 5.2.0 are supported.
+- The Trino [](jvm-config) must allow using the Java security manager:
+  ```text
+  # https://bugs.openjdk.org/browse/JDK-8327134
+  -Djava.security.manager=allow
+  ```
 
 ## Configuration
 
